# phantomstyle

./: .gitignore
src/phantom/: phantomstyle.cpp
src/styleplugin/: CMakeLists.txt
